N20081113/plugins/org.eclipse.mat.parser/src/org/eclipse/mat/parser/internal/oql/parser/OQLParser.java
/* Generated By:JavaCC: Do not edit this line. OQLParser.java */
package org.eclipse.mat.parser.internal.oql.parser;

import java.math.BigInteger;
import java.util.List;
import java.util.ArrayList;
import java.util.LinkedList;

import org.eclipse.mat.parser.internal.oql.ICompiler;
import org.eclipse.mat.parser.internal.oql.compiler.Attribute;
import org.eclipse.mat.parser.internal.oql.compiler.Query;
import org.eclipse.mat.parser.internal.oql.compiler.Expression;

public class OQLParser implements OQLParserConstants
{
    ICompiler compiler;

    public void setCompiler(ICompiler compiler)
    {
        this.compiler = compiler;
    }

    public static void main(String args[]) throws ParseException
    {
        System.out.println("Reading from stdin");
        OQLParser p = new OQLParser(System.in);
        p.setCompiler(new org.eclipse.mat.parser.internal.oql.compiler.CompilerImpl());
        Query q = p.ParseQueryFromInputLine();
        System.out.println(q);

        System.out.println("Parse Successfull");
    }

    protected boolean seeUnreservedKeyword(String keyword)
    {
        return (getToken(1).kind == IDENTIFIER && keyword.equals(getToken(1).image.toUpperCase()));
    }

    protected boolean seeUnreservedKeyword(String... keywords)
    {
        for (int index = 0; index < keywords.length; index++)
        {
            if (getToken(index + 1).kind != IDENTIFIER
                            || !keywords[index].equals(getToken(index + 1).image.toUpperCase()))
                return false;
        }
        return true;
    }

    protected boolean seeExclude(String... keywords)
    {
        if (getToken(1).kind != IDENTIFIER)
            return false;

        String image = getToken(1).image.toUpperCase();
        for (int index = 0; index < keywords.length; index++)
            if (keywords[index].equals(image))
                return false;

        return true;
    }

    protected ParseException generateCustomParseException(String... keywords)
    {
        Token currentToken = getToken(0);

        StringBuilder buf = new StringBuilder();
        for (String keyword : keywords)
            buf.append("\n\t\"").append(keyword).append('"');

        String msg = java.text.MessageFormat.format(
                        "Encountered \"{0}\" at line {1}, column {2}.\nWas expecting one of: {3}",
                        currentToken.next.image, currentToken.next.beginLine, currentToken.next.beginColumn, buf
                                        .toString());

        ParseException e = new ParseException(msg);
        e.currentToken = currentToken;
        return e;
    }

    /*******************************
     * THE OQL GRAMMAR STARTS HERE *
     *******************************/
    final public Query ParseQuery() throws ParseException
    {
        Query q;
        q = SelectStatement();
        jj_consume_token(0);
        {
            if (true)
                return q;
        }
        throw new Error("Missing return statement in function");
    }

    final public Query ParseQueryFromInputLine() throws ParseException
    {
        Query q;
        q = SelectStatement();
        jj_consume_token(39);
        {
            if (true)
                return q;
        }
        throw new Error("Missing return statement in function");
    }

    final public Query SelectStatement() throws ParseException
    {
        Query q = new Query();
        try
        {
            if (seeUnreservedKeyword("SELECT"))
            {

            }
            else
            {
                jj_consume_token(-1);
                throw new ParseException();
            }
            jj_consume_token(IDENTIFIER);
        }
        catch (ParseException e)
        {
            {
                if (true)
                    throw generateCustomParseException("SELECT");
            }
        }
        SelectList(q);
        FromClause(q);
        if (jj_2_1(1))
        {
            WhereClause(q);
        }
        else
        {

        }
        if (jj_2_2(1))
        {
            UnionClause(q);
        }
        else
        {

        }
        {
            if (true)
                return q;
        }
        throw new Error("Missing return statement in function");
    }

    /* ---------------- select --------------------- */
    final public void SelectList(Query q) throws ParseException
    {
        Query.SelectClause selectClause = new Query.SelectClause();
        List<Query.SelectItem> columns = new ArrayList<Query.SelectItem>();
        Query.SelectItem a;
        if (jj_2_3(1))
        {
            if (seeUnreservedKeyword("DISTINCT"))
            {
                jj_consume_token(IDENTIFIER);
                selectClause.setDistinct(true);
            }
            else if (seeUnreservedKeyword("AS", "RETAINED", "SET"))
            {
                jj_consume_token(IDENTIFIER);
                jj_consume_token(IDENTIFIER);
                jj_consume_token(IDENTIFIER);
                selectClause.setRetainedSet(true);
            }
            else
            {
                jj_consume_token(-1);
                throw new ParseException();
            }
        }
        else
        {

        }
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
        {
            case 40:
                jj_consume_token(40);
                break;
            default:
                jj_la1[1] = jj_gen;
                if (seeUnreservedKeyword("OBJECTS"))
                {
                    jj_consume_token(IDENTIFIER);
                    a = SelectItem();
                    columns.add(a);
                    selectClause.setAsObjects(true);
                }
                else
                {
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
                    {
                        case DOLLAR_SIGN:
                        case IDENTIFIER:
                        case 45:
                            a = SelectItem();
                            columns.add(a);
                            label_1: while (true)
                            {
                                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
                                {
                                    case 41:

                                        break;
                                    default:
                                        jj_la1[0] = jj_gen;
                                        break label_1;
                                }
                                jj_consume_token(41);
                                a = SelectItem();
                                columns.add(a);
                            }
                            break;
                        default:
                            jj_la1[2] = jj_gen;
                            jj_consume_token(-1);
                            throw new ParseException();
                    }
                }
        }
        selectClause.setSelectList(columns);
        q.setSelectClause(selectClause);
    }

    final public Query.SelectItem SelectItem() throws ParseException
    {
        Object ex = null;
        Token t1 = null, t2 = null;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
        {
            case IDENTIFIER:
            case 45:
                ex = PathExpression();
                break;
            case DOLLAR_SIGN:
                ex = EnvVarPathExpression();
                break;
            default:
                jj_la1[3] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        if (seeUnreservedKeyword("AS"))
        {
            jj_consume_token(IDENTIFIER);
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
            {
                case STRING_LITERAL:
                    t1 = jj_consume_token(STRING_LITERAL);
                    break;
                case IDENTIFIER:
                    t2 = jj_consume_token(IDENTIFIER);
                    break;
                default:
                    jj_la1[4] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        else
        {

        }
        String name = null;
        if (t1 != null)
            name = t1.image.substring(1, t1.image.length() - 1);
        else if (t2 != null)
            name = t2.image;

        {
            if (true)
                return new Query.SelectItem(name, (Expression) ex);
        }
        throw new Error("Missing return statement in function");
    }

    final public Object PathExpression() throws ParseException
    {
        List<Object> elements = new ArrayList<Object>();
        Object ex = null;
        ex = ObjectFacet(true);
        elements.add(ex);
        label_2: while (true)
        {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
            {
                case 42:

                    break;
                default:
                    jj_la1[5] = jj_gen;
                    break label_2;
            }
            jj_consume_token(42);
            ex = ObjectFacet(false);
            elements.add(ex);
        }
        {
            if (true)
                return compiler.path(elements);
        }
        throw new Error("Missing return statement in function");
    }

    final public Object EnvVarPathExpression() throws ParseException
    {
        LinkedList<Object> elements = new LinkedList<Object>();
        Object ex = null;
        Token t_name = null;
        jj_consume_token(DOLLAR_SIGN);
        jj_consume_token(43);
        t_name = jj_consume_token(IDENTIFIER);
        jj_consume_token(44);
        label_3: while (true)
        {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
            {
                case 42:

                    break;
                default:
                    jj_la1[6] = jj_gen;
                    break label_3;
            }
            jj_consume_token(42);
            ex = ObjectFacet(false);
            elements.add(ex);
        }
        elements.addFirst(new Attribute(t_name.image, false, true));
        {
            if (true)
                return compiler.path(elements);
        }
        throw new Error("Missing return statement in function");
    }

    final public Object ObjectFacet(boolean isFirstInPath) throws ParseException
    {
        Token t_native = null, t_name = null;
        List<Expression> parameters = null;
        Object ex = null;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
        {
            case 45:
                t_native = jj_consume_token(45);
                break;
            default:
                jj_la1[7] = jj_gen;

        }
        t_name = jj_consume_token(IDENTIFIER);
        if (jj_2_4(2147483647))
        {
            parameters = ParameterList();
        }
        else
        {

        }
        if (parameters != null)
            ex = compiler.method(t_name.image, parameters, isFirstInPath);
        else
            ex = new Attribute(t_name.image, t_native != null, false);
        {
            if (true)
                return ex;
        }
        throw new Error("Missing return statement in function");
    }

    final public List<Expression> ParameterList() throws ParseException
    {
        List<Expression> parameters = new ArrayList<Expression>();
        Object expr = null;
        jj_consume_token(46);
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
        {
            case INTEGER_LITERAL:
            case LONG_LITERAL:
            case FLOATING_POINT_LITERAL:
            case CHARACTER_LITERAL:
            case STRING_LITERAL:
            case TRUE:
            case FALSE:
            case NULL:
            case DOLLAR_SIGN:
            case IDENTIFIER:
            case 45:
            case 46:
            case 51:
            case 52:
                expr = SimpleExpression();
                parameters.add((Expression) expr);
                label_4: while (true)
                {
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
                    {
                        case 41:

                            break;
                        default:
                            jj_la1[8] = jj_gen;
                            break label_4;
                    }
                    jj_consume_token(41);
                    expr = SimpleExpression();
                    parameters.add((Expression) expr);
                }
                break;
            default:
                jj_la1[9] = jj_gen;

        }
        jj_consume_token(47);
        {
            if (true)
                return parameters;
        }
        throw new Error("Missing return statement in function");
    }

    /* ---------------- from --------------------- */
    final public void FromClause(Query q) throws ParseException
    {
        Query.FromClause fromItem = new Query.FromClause();
        Query subSelect = null;

        boolean isObjects = false;

        Token t1 = null, t2 = null;
        try
        {
            if (seeUnreservedKeyword("FROM"))
            {

            }
            else
            {
                jj_consume_token(-1);
                throw new ParseException();
            }
            jj_consume_token(IDENTIFIER);
        }
        catch (ParseException e)
        {
            {
                if (true)
                    throw generateCustomParseException("FROM");
            }
        }
        if (seeUnreservedKeyword("OBJECTS"))
        {
            jj_consume_token(IDENTIFIER);
            isObjects = true;
        }
        else
        {

        }
        if (jj_2_5(2147483647))
        {
            t1 = jj_consume_token(INSTANCEOF);
        }
        else
        {

        }
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
        {
            case INTEGER_LITERAL:
            case HEX_LITERAL:
            case STRING_LITERAL:
            case DOLLAR_SIGN:
            case IDENTIFIER:
                FromItem(fromItem);
                break;
            case 46:
                jj_consume_token(46);
                subSelect = SelectStatement();
                jj_consume_token(47);
                break;
            default:
                jj_la1[10] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        if (seeExclude("WHERE", "UNION"))
        {
            t2 = jj_consume_token(IDENTIFIER);
        }
        else
        {

        }
        fromItem.setSubSelect(subSelect);

        fromItem.setIncludeObjects(isObjects);
        fromItem.setIncludeSubClasses(t1 != null);

        if (t2 != null)
            fromItem.setAlias(t2.image);

        q.setFromClause(fromItem);
    }

    final public void FromItem(Query.FromClause fromClause) throws ParseException
    {
        Token t = null;
        Object expr = null;
        String className = null;
        long address = 0;
        int objectId = 0;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
        {
            case DOLLAR_SIGN:
                expr = EnvVarPathExpression();
                fromClause.setCall((Expression) expr);
                break;
            case IDENTIFIER:
                className = ClassName();
                fromClause.setClassName(className);
                break;
            case STRING_LITERAL:
                t = jj_consume_token(STRING_LITERAL);
                fromClause.setClassNamePattern(t.image.substring(1, t.image.length() - 1));
                break;
            case HEX_LITERAL:
                address = ObjectAddress();
                fromClause.addObjectAddress(address);
                label_5: while (true)
                {
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
                    {
                        case 41:

                            break;
                        default:
                            jj_la1[11] = jj_gen;
                            break label_5;
                    }
                    jj_consume_token(41);
                    address = ObjectAddress();
                    fromClause.addObjectAddress(address);
                }
                break;
            case INTEGER_LITERAL:
                objectId = ObjectId();
                fromClause.addObjectId(objectId);
                label_6: while (true)
                {
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
                    {
                        case 41:

                            break;
                        default:
                            jj_la1[12] = jj_gen;
                            break label_6;
                    }
                    jj_consume_token(41);
                    objectId = ObjectId();
                    fromClause.addObjectId(objectId);
                }
                break;
            default:
                jj_la1[13] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
    }

    final public String ClassName() throws ParseException
    {
        StringBuilder b = new StringBuilder();
        Token t;
        t = jj_consume_token(IDENTIFIER);
        b.append(t.image);
        label_7: while (true)
        {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
            {
                case 42:

                    break;
                default:
                    jj_la1[14] = jj_gen;
                    break label_7;
            }
            jj_consume_token(42);
            t = jj_consume_token(IDENTIFIER);
            b.append(".").append(t.image);
        }
        label_8: while (true)
        {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
            {
                case 48:

                    break;
                default:
                    jj_la1[15] = jj_gen;
                    break label_8;
            }
            jj_consume_token(48);
            b.append("[]");
        }
        {
            if (true)
                return b.toString();
        }
        throw new Error("Missing return statement in function");
    }

    final public long ObjectAddress() throws ParseException
    {
        Token t = null;
        t = jj_consume_token(HEX_LITERAL);
        {
            if (true)
                return new BigInteger(t.image.substring(2), 16).longValue();
        }
        throw new Error("Missing return statement in function");
    }

    final public int ObjectId() throws ParseException
    {
        Token t = null;
        t = jj_consume_token(INTEGER_LITERAL);
        {
            if (true)
                return Integer.parseInt(t.image);
        }
        throw new Error("Missing return statement in function");
    }

    /* ---------------- where --------------------- */
    final public void WhereClause(Query q) throws ParseException
    {
        Object ex;
        if (seeUnreservedKeyword("WHERE"))
        {

        }
        else
        {
            jj_consume_token(-1);
            throw new ParseException();
        }
        jj_consume_token(IDENTIFIER);
        ex = ConditionalOrExpression();
        q.setWhereClause((Expression) ex);
    }

    final public Object ConditionalOrExpression() throws ParseException
    {
        Object ex, r;
        ArrayList<Object> list = null;
        ex = ConditionalAndExpression();
        label_9: while (true)
        {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
            {
                case OR:

                    break;
                default:
                    jj_la1[16] = jj_gen;
                    break label_9;
            }
            jj_consume_token(OR);
            r = ConditionalAndExpression();
            if (list == null)
            {
                list = new ArrayList<Object>();
                list.add(ex);
            }
            list.add(r);
        }
        if (list != null)
        {
            ex = compiler.or(list.toArray());
        }
        {
            if (true)
                return ex;
        }
        throw new Error("Missing return statement in function");
    }

    final public Object ConditionalAndExpression() throws ParseException
    {
        Object ex, r;
        ArrayList<Object> list = null;
        ex = EqualityExpression();
        label_10: while (true)
        {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
            {
                case AND:

                    break;
                default:
                    jj_la1[17] = jj_gen;
                    break label_10;
            }
            jj_consume_token(AND);
            r = EqualityExpression();
            if (list == null)
            {
                list = new ArrayList<Object>();
                list.add(ex);
            }
            list.add(r);
        }
        if (list != null)
        {
            ex = compiler.and(list.toArray());
        }
        {
            if (true)
                return ex;
        }
        throw new Error("Missing return statement in function");
    }

    final public Object EqualityExpression() throws ParseException
    {
        Object ex, r;
        ex = RelationalExpression();
        label_11: while (true)
        {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
            {
                case NE:
                case 49:

                    break;
                default:
                    jj_la1[18] = jj_gen;
                    break label_11;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
            {
                case 49:
                    jj_consume_token(49);
                    r = RelationalExpression();
                    ex = compiler.equal(ex, r);
                    break;
                case NE:
                    jj_consume_token(NE);
                    r = RelationalExpression();
                    ex = compiler.notEqual(ex, r);
                    break;
                default:
                    jj_la1[19] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        {
            if (true)
                return ex;
        }
        throw new Error("Missing return statement in function");
    }

    final public Object RelationalExpression() throws ParseException
    {
        Object ex, r;
        ex = SimpleExpression();
        if (jj_2_6(1))
        {
